2006-11-16  David Schleef  <ds@schleef.org>

	* gst/librfb/gstrfbsrc.h:  Oops, add this file.

2006-11-16  David Schleef  <ds@schleef.org>

	Patch by: Andre Moreira Magalhaes <andrunko@gmail.com>

	* configure.ac:
	* gst/librfb/Makefile.am:
	* gst/librfb/gstrfbsrc.c:
	* gst/librfb/rfb.c:
	* gst/librfb/rfb.h:
	* gst/librfb/rfbbuffer.c:
	* gst/librfb/rfbbuffer.h:
	* gst/librfb/rfbbytestream.c:
	* gst/librfb/rfbbytestream.h:
	* gst/librfb/rfbcontext.h:
	* gst/librfb/rfbdecoder.c:
	* gst/librfb/rfbdecoder.h:
	* gst/librfb/rfbutil.h:
	  Port librfb to 0.10 (#376106).

2006-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/spc/gstspc.c: (spc_play):
	  Fix build with disabled gst-debug.

2006-11-15  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_reset),
	(gst_wavpack_dec_init), (gst_wavpack_dec_change_state):
	* ext/wavpack/gstwavpackenc.c: (gst_wavpack_enc_base_init),
	(gst_wavpack_enc_class_init), (gst_wavpack_enc_reset),
	(gst_wavpack_enc_init), (gst_wavpack_enc_set_wp_config),
	(gst_wavpack_enc_change_state):
	* ext/wavpack/gstwavpackparse.c:
	  Some small clean-ups: use enums instead of hard-coded numbers,
	  const-ify element details, re-factor some code into _reset()
	  functions (#352605).

2006-11-14  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/dvb/gstdvbsrc.c: (gst_dvbsrc_create):
	* sys/dvb/gstdvbsrc.h:
	  Fix minor printf format issue; remove overly paranoid checks in
	  create function; fix GObject boilerplate macros.

2006-11-14  Wim Taymans  <wim@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_get_duration),
	(gst_qtdemux_handle_src_query), (qtdemux_parse_trak):
	Don't parse extra sample params for raw pcm. Fixes #374914.

2006-11-14  Wim Taymans  <wim@fluendo.com>

	* tests/check/elements/.cvsignore:
	Add cdaudio to ignore.

2006-11-14  Wim Taymans  <wim@fluendo.com>

	* ext/Makefile.am:
	dist cdaudio dir.
